--- a/layout/_script/_comment/gitalk.ejs
+++ b/layout/_script/_comment/gitalk.ejs
@@ -13,6 +13,7 @@
     distractionFreeMode: true,
     language: '<%= theme.comment.gitalk.language %>',
     enableHotKey: '<%= theme.comment.gitalk.enableHotKey %>'
+    proxy: '<%= theme.comment.gitalk.proxy %>'
   })
   gitalk.render('comments')
   </script>
